<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DeliveryDetails"
    android:fillViewport="true">

    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <Toolbar
            android:id="@+id/deliveryToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:titleTextColor="@color/white"
            android:layout_alignParentTop="true"
            tools:targetApi="m">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/toolbar_title_create_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/roboto"
                    android:text="Delivery Details"
                    android:textColor="@color/white"
                    android:textFontWeight="100"
                    android:textSize="18sp"
                    android:textStyle="bold" />

<!--                <TextView-->
<!--                    android:id="@+id/tv_btn_delivery_skip"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginEnd="32dp"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:text="SKIP"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:fontFamily="@font/roboto"-->
<!--                    android:textStyle="bold"-->
<!--                    android:textSize="18sp"-->
<!--                    android:textFontWeight="200"-->

<!--                    />-->


            </RelativeLayout>

        </Toolbar>

        <TextView
            android:id="@+id/delivery_enter_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter contact details"
            android:layout_below="@id/deliveryToolbar"
            android:layout_margin="32dp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:textStyle="normal"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutContactNo"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"

            app:errorEnabled="true"
            app:hintTextAppearance="@style/textStyle"

            android:layout_centerInParent="true"

            android:layout_below="@id/delivery_enter_details">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_delivery_contact_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_no"
                android:inputType="phone"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDeliveryAddress"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"

            app:errorEnabled="true"
            app:hintTextAppearance="@style/textStyle"

            android:layout_centerInParent="true"

            android:layout_below="@id/textInputLayoutContactNo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_delivery_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/delivery_addres"
                android:inputType="textMultiLine"
                android:maxLines="5" />
        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPostalCode"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:focusable="true"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/textStyle"

            android:layout_centerInParent="true"

            android:layout_below="@id/textInputLayoutDeliveryAddress" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_delivery_postal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/delivery_postal_code"
                android:inputType="number"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCity"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:focusable="true"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/textStyle"

            android:layout_centerInParent="true"

            android:layout_below="@id/textInputLayoutPostalCode" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_delivery_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/delivery_city"
                android:inputType="text"
                android:maxLength="30" />
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/btn_delivery_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutCity"
            android:layout_marginStart="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="Back"
            android:textColor="@color/white"
            android:visibility="gone"

            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_delivery_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutCity"
            android:layout_margin="32dp"
            android:layout_toEndOf="@id/btn_delivery_back"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="Continue"
            android:textColor="@color/white"
            android:textSize="12sp" />




    </RelativeLayout>
</ScrollView>
