<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.UserProfile">

        <androidx.appcompat.widget.Toolbar

            android:id="@+id/profile_toolbar"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/toolbar_title_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profile"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textSize="18sp"
                    android:textFontWeight="200"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/btn_back_profile"/>


                <Button

                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:id="@+id/btn_back_profile"
                    android:padding="32dp"
                    android:background="@drawable/ic_arrow_back_black_24dp"
                    />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_profile_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_toolbar"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_toolbar"
            android:layout_toEndOf="@id/tv_profile_name_title"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_profile_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_profile_name_title"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/email_profile" />

        <TextView
            android:id="@+id/tv_profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_profile_name"
            android:layout_toEndOf="@id/tv_profile_email_title"

            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="16sp"/>



        <TextView
            android:id="@+id/tv_profile_delivery_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_profile_email"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/delivery_details" />

        <TextView
            android:id="@+id/tv_profile_delivery_contact_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_profile_delivery_details_title"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:lineSpacingExtra="3dp"
            android:text="@string/contactno"
            />


        <TextView
            android:id="@+id/tv_profile_delivery_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_profile_delivery_details_title"
            android:layout_toEndOf="@id/tv_profile_delivery_contact_title"

            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:lineSpacingExtra="3dp"
            />
        <TextView
            android:id="@+id/tv_profile_delivery_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_profile_delivery_contact"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:lineSpacingExtra="3dp"/>


        <TextView
            android:id="@+id/tv_profile_delivery_postal_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_profile_delivery_address"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="16sp"
        />

        <TextView
            android:id="@+id/tv_profile_delivery_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_profile_delivery_postal_code"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/btn_profile_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_profile_delivery_city"
            android:layout_centerHorizontal="true"
            android:layout_margin="32dp"
            android:background="@drawable/shape"
            android:textSize="14sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="   Edit Profile  "
            android:drawableLeft="@drawable/ic_edit_black_24dp"

            android:textColor="@color/white"
            android:visibility="gone"

            />

    </RelativeLayout>



</ScrollView>